www/src/js/views/errors/ErrorPage.scss
@import '~styles/utils/modules-entry.scss';

.container {
  composes: page-container from global;
  margin-top: 1rem;

  @include media-breakpoint-up(md) {
    margin-left: 2rem;
  }
}

.header {
  margin-bottom: 1.5rem;
}

.expr {
  composes: text-primary from global;
  display: block;
}

.subheader {
  margin-bottom: 0;
  font-weight: bold;
}

.link {
  composes: btn-link from global;
  padding: 0;
  margin: 0;
  border: 0;
}

.centerContainer {
  text-align: center;
}

.inlineContainer {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin-bottom: 0;
  text-align: center;
}

.errorButtonContainer > :not(:last-child) {
  margin-right: 1em;
}

.bigCharacter {
  padding: 0.1rem;
  font-weight: bolder;
  font-size: 8rem;
  text-shadow:
    3px 3px 0 theme-color(),
    -1px -1px 0 theme-color(),
    1px -1px 0 theme-color(),
    -1px 1px 0 theme-color(),
    1px 1px 0 theme-color();
  color: black;
}

